--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,7 +7,8 @@
     tools:context=".user.SignUpActivity">
 
     <LinearLayout
-        android:layout_width="266dp"
+        android:id="@+id/fieldContainer"
+        android:layout_width="293dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical">
@@ -17,6 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:drawableStart="@drawable/ic_email"
+            android:drawablePadding="10dp"
             android:ems="10"
             android:hint="@string/set_email_hint"
             android:importantForAutofill="no"
@@ -27,6 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:drawableStart="@drawable/ic_profile"
+            android:drawablePadding="10dp"
             android:ems="10"
             android:hint="@string/set_username_hint"
             android:importantForAutofill="no"
@@ -37,6 +42,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:drawableStart="@drawable/ic_password"
+            android:drawablePadding="10dp"
             android:ems="10"
             android:hint="@string/password_hint"
             android:importantForAutofill="no"
@@ -47,6 +54,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:drawableStart="@drawable/ic_password"
+            android:drawablePadding="10dp"
             android:ems="10"
             android:hint="@string/reenter_password_hint"
             android:importantForAutofill="no"
@@ -57,7 +66,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="@string/create_account_text" />
+            android:background="@color/secondaryColor"
+            android:fontFamily="@font/open_sans"
+            android:text="@string/create_account_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        <TextView
+            android:id="@+id/redirect_login_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/open_sans"
+            android:text="@string/redirect_sign_in"
+            android:textAlignment="center"
+            android:textColor="@color/redirect_color" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="99dp"
+        android:layout_height="89dp"
+        android:layout_above="@+id/fieldContainer"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="82dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginBottom="14dp"
+        android:contentDescription="@string/logo"
+        app:srcCompat="@drawable/ic_logo" />
 
 </RelativeLayout>
