- Set up data binding to PhoneAuth,Login and Sign up,so no need findViewById anymore - Set up View Model for PhoneAuth,Login and Sign up - Set up Gson,now parsing data no need to keep getString..only 1 line of Gson code - Move all the Authenticate code to User Repo  (So now,Controller only control UI,ViewModel all the logic and update state to controller,Then user repo do the API call and  other operation  - Set up SharedPreferenceLiveData, so when the user login means that all data access token all stuff will be safe to use.  - Remove all unnecessary code

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -50,6 +50,9 @@
         <action
             android:id="@+id/action_loginFragment_to_forgot_password_graph"
             app:destination="@id/forgot_password_graph" />
+        <action
+            android:id="@+id/actionMain"
+            app:destination="@id/mainFragment" />
     </fragment>
     <navigation
         android:id="@+id/registration_graph"
@@ -61,7 +64,9 @@
             tools:layout="@layout/fragment_phone_auth" >
             <action
                 android:id="@+id/action_phoneAuthFragment_to_signUpFragment"
-                app:destination="@id/signUpFragment" />
+                app:destination="@id/signUpFragment"
+                app:popUpTo="@id/signUpFragment"
+                app:popUpToInclusive="true"/>
         </fragment>
         <fragment
             android:id="@+id/signUpFragment"
