--- a/app/src/main/res/layout/fragment_phone_auth.xml
+++ b/app/src/main/res/layout/fragment_phone_auth.xml
@@ -1,83 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.user.PhoneAuthFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <EditText
-        android:id="@+id/phoneNumberField"
-        android:layout_width="253dp"
-        android:layout_height="45dp"
-        android:ems="10"
-        android:hint="@string/phone_number_hint"
-        android:importantForAutofill="no"
-        android:inputType="phone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.416" />
+    <data>
+        <variable
+            name="viewModel"
+            type="upuphere.com.upuphere.viewmodel.PhoneAuthViewModel"
+            />
 
-    <EditText
-        android:id="@+id/verificationField"
-        android:layout_width="251dp"
-        android:layout_height="45dp"
-        android:ems="10"
-        android:hint="@string/OTP_hint"
-        android:importantForAutofill="no"
-        android:inputType="number"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/verifyButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumberField"
-        app:layout_constraintVertical_bias="0.166" />
 
-    <Button
-        android:id="@+id/sendOTPbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/send_otp_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumberField"
-        app:layout_constraintVertical_bias="0.485" />
+    </data>
 
-    <Button
-        android:id="@+id/verifyButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/verify_button"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.823"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumberField"
-        app:layout_constraintVertical_bias="0.485" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/root_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.user.PhoneAuthFragment">
 
-    <TextView
-        android:id="@+id/detailsTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/verifyButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/verificationField" />
+        <EditText
+            android:text="@={viewModel.phoneNumber}"
+            android:id="@+id/phoneNumberField"
+            android:layout_width="253dp"
+            android:layout_height="45dp"
+            android:ems="10"
+            android:hint="@string/phone_number_hint"
+            android:importantForAutofill="no"
+            android:inputType="phone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.416" />
 
-    <Button
-        android:id="@+id/resendButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/resend_button"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumberField" />
+        <EditText
+            android:text="@={viewModel.verificationField}"
+            android:id="@+id/verificationField"
+            android:layout_width="251dp"
+            android:layout_height="45dp"
+            android:ems="10"
+            android:hint="@string/OTP_hint"
+            android:importantForAutofill="no"
+            android:inputType="number"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/verifyButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.506"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumberField"
+            app:layout_constraintVertical_bias="0.166" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:onClick="@{viewModel::onSendOTPButtonClick}"
+            android:id="@+id/sendOTPbutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/send_otp_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumberField"
+            app:layout_constraintVertical_bias="0.485" />
+
+        <Button
+            android:onClick="@{viewModel::onVerifyButtonClick}"
+            android:id="@+id/verifyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/verify_button"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.823"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumberField"
+            app:layout_constraintVertical_bias="0.485" />
+
+        <TextView
+            android:text="@{viewModel.detailTextView}"
+            android:id="@+id/detailsTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/verifyButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/verificationField" />
+
+        <Button
+            android:onClick="@{viewModel::onResendButtonClick}"
+            android:id="@+id/resendButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/resend_button"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumberField" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
