--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,96 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.user.SignUpFragment">
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="viewModel"
+            type="upuphere.com.upuphere.viewmodel.SignUpViewModel" />
 
-    <LinearLayout
-        android:id="@+id/fieldContainer"
-        android:layout_width="293dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
+        <variable
+            name="afterTextChanged"
+            type="androidx.databinding.adapters.TextViewBindingAdapter.AfterTextChanged"
+            />
+    </data>
 
-        <EditText
-            android:id="@+id/emailField"
-            android:layout_width="match_parent"
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/root_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.user.SignUpFragment">
+
+        <LinearLayout
+            android:id="@+id/fieldContainer"
+            android:layout_width="293dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:drawableStart="@drawable/ic_email"
-            android:drawablePadding="10dp"
-            android:ems="10"
-            android:hint="@string/set_email_hint"
-            android:importantForAutofill="no"
-            android:inputType="textEmailAddress" />
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/usernameField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:drawableStart="@drawable/ic_profile"
-            android:drawablePadding="10dp"
-            android:ems="10"
-            android:hint="@string/set_username_hint"
-            android:importantForAutofill="no"
-            android:inputType="textEmailAddress" />
+            <EditText
+                android:text="@={viewModel.email}"
+                android:id="@+id/emailField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:drawableStart="@drawable/ic_email"
+                android:drawablePadding="10dp"
+                android:ems="10"
+                android:hint="@string/set_email_hint"
+                android:importantForAutofill="no"
+                android:inputType="textEmailAddress"
+                android:afterTextChanged="@{viewModel::afterEmailChanged}"/>
 
-        <EditText
-            android:id="@+id/passwordField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:drawableStart="@drawable/ic_password"
-            android:drawablePadding="10dp"
-            android:ems="10"
-            android:hint="@string/password_hint"
-            android:importantForAutofill="no"
-            android:inputType="textPassword" />
+            <EditText
+                android:text="@={viewModel.username}"
+                android:id="@+id/usernameField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:drawableStart="@drawable/ic_profile"
+                android:drawablePadding="10dp"
+                android:ems="10"
+                android:hint="@string/set_username_hint"
+                android:importantForAutofill="no"
+                android:inputType="textEmailAddress"
+                android:afterTextChanged="@{viewModel::afterUsernameChanged}"/>
 
-        <EditText
-            android:id="@+id/reenterPasswordField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:drawableStart="@drawable/ic_password"
-            android:drawablePadding="10dp"
-            android:ems="10"
-            android:hint="@string/reenter_password_hint"
-            android:importantForAutofill="no"
-            android:inputType="textPassword" />
+            <EditText
+                android:text="@={viewModel.password}"
+                android:id="@+id/passwordField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:drawableStart="@drawable/ic_password"
+                android:drawablePadding="10dp"
+                android:ems="10"
+                android:hint="@string/password_hint"
+                android:importantForAutofill="no"
+                android:inputType="textPassword"
+                android:afterTextChanged="@{viewModel::afterPasswordChanged}"/>
 
-        <Button
-            android:id="@+id/createAccountButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@color/secondaryColor"
-            android:fontFamily="@font/open_sans"
-            android:text="@string/create_account_text"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+            <EditText
+                android:text="@={viewModel.confirmPassword}"
+                android:id="@+id/reenterPasswordField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:drawableStart="@drawable/ic_password"
+                android:drawablePadding="10dp"
+                android:ems="10"
+                android:hint="@string/reenter_password_hint"
+                android:importantForAutofill="no"
+                android:inputType="textPassword"
+                android:afterTextChanged="@{viewModel::afterConfirmPasswordChanged}"/>
 
-        <TextView
-            android:id="@+id/redirect_login_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/open_sans"
-            android:text="@string/redirect_sign_in"
-            android:textAlignment="center"
-            android:textColor="@color/redirect_color" />
-    </LinearLayout>
+            <Button
+                android:onClick="@{viewModel::OnClickCreateAccountButton}"
+                android:id="@+id/createAccountButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@color/secondaryColor"
+                android:fontFamily="@font/open_sans"
+                android:text="@string/create_account_text"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="99dp"
-        android:layout_height="89dp"
-        android:layout_marginStart="155dp"
-        android:layout_marginTop="82dp"
-        android:layout_marginEnd="157dp"
-        android:layout_marginBottom="14dp"
-        android:contentDescription="@string/logo"
-        app:srcCompat="@drawable/ic_logo" />
+            <TextView
+                android:onClick="@{viewModel::OnClickRedirectLoginText}"
+                android:id="@+id/redirect_login_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/open_sans"
+                android:text="@string/redirect_sign_in"
+                android:textAlignment="center"
+                android:textColor="@color/redirect_color" />
+        </LinearLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="99dp"
+            android:layout_height="89dp"
+            android:layout_marginStart="155dp"
+            android:layout_marginTop="82dp"
+            android:layout_marginEnd="157dp"
+            android:layout_marginBottom="14dp"
+            android:contentDescription="@string/logo"
+            app:srcCompat="@drawable/ic_logo" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</layout>
