- Convert the room created time to Time ago format,eg. 2 days ago - Change the title of the fragment when in Main Fragment

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -7,8 +7,8 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="upuphere.com.upuphere.MainFragment"
-        android:label="fragment_main"
-        tools:layout="@layout/fragment_main" >
+        android:label="UpUpHere"
+        tools:layout="@layout/fragment_main">
         <action
             android:id="@+id/action_mainFragment_to_createRoomFragment"
             app:destination="@id/createRoomFragment" />
