--- a/app/src/main/res/layout/room_item_row.xml
+++ b/app/src/main/res/layout/room_item_row.xml
@@ -51,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/room_name"
-                    android:text="@{model.createdAt}"
+                    app:timeAgo="@{model.createdAt}"
                     android:textAlignment="textStart"
                     android:fontFamily="@font/open_sans"
                     android:layout_alignParentStart="true"
