Create Room Functionality - Create Room UI - Send the Room name and Room Image to server - Select photo from Album - Take photo from Album - Remove the selected photo if dont like it - Send Image using Volley Multipart

--- a/app/src/main/res/layout/fragment_create_room.xml
+++ b/app/src/main/res/layout/fragment_create_room.xml
@@ -10,20 +10,49 @@
             />
     </data>
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/root_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.room.CreateRoomFragment">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
+
+        <EditText
+            android:id="@+id/room_name_field"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Create Room Fragment"
-            android:textAlignment="center"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@null"
+            android:ems="10"
+            android:hint="@string/room_name_hint"
+            android:inputType="textPersonName"
+            android:importantForAutofill="no"
+            android:text="@={viewmodel.roomName}"/>
 
-    </FrameLayout>
+        <ImageView
+            android:id="@+id/chooseImageButton"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_below="@id/room_name_field"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="40dp"
+            app:srcCompat="@drawable/ic_image"
+            android:contentDescription="@string/content_description"
+            android:onClick="@{viewmodel::onImageClick}"/>
 
+        <ImageView
+            android:id="@+id/chosenImageShown"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_below="@id/room_name_field"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="40dp"
+            android:visibility="gone"
+            tools:srcCompat="@tools:sample/avatars"
+            android:contentDescription="@string/content_description"
+            android:onClick="@{viewmodel::onClickImageChosen}"/>
+
+    </RelativeLayout>
 </layout>
