--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -20,11 +20,14 @@
     <fragment
         android:id="@+id/createRoomFragment"
         android:name="upuphere.com.upuphere.ui.room.CreateRoomFragment"
-        android:label="fragment_create_room"
-        tools:layout="@layout/fragment_create_room" >
+        android:label="Create a room"
+        tools:layout="@layout/fragment_create_room">
         <action
             android:id="@+id/action_createRoomFragment_to_roomFragment"
-            app:destination="@id/roomFragment" />
+            app:destination="@+id/roomFragment" />
+        <action
+            android:id="@+id/action_createRoomFragment_to_displayPhotoFragment"
+            app:destination="@id/displayPhotoFragment" />
     </fragment>
     <fragment
         android:id="@+id/roomFragment"
@@ -42,7 +45,7 @@
     </fragment>
     <fragment
         android:id="@+id/commentFragment"
-        android:name="upuphere.com.upuphere.fragment.CommentFragment"
+        android:name="upuphere.com.upuphere.ui.CommentFragment"
         android:label="fragment_comment"
         tools:layout="@layout/fragment_comment" />
     <fragment
@@ -113,4 +116,12 @@
         android:name="upuphere.com.upuphere.ui.room.CreatePostFragment"
         android:label="fragment_create_post"
         tools:layout="@layout/fragment_create_post" />
+    <fragment
+        android:id="@+id/displayPhotoFragment"
+        android:name="upuphere.com.upuphere.fragment.DisplayPhotoFragment"
+        tools:layout="@layout/fragment_display_photo">
+        <argument
+            android:name="bitmap"
+            app:argType="android.graphics.Bitmap" />
+    </fragment>
 </navigation>
