--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,6 @@
 
     <color name="background_color">#FFFFFF</color>
     <color name="redirect_color">#2196F3</color>
+
+    <color name="grey">#FFF7F6</color>
 </resources>
