--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,21 +11,30 @@
     </data>
 
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <RelativeLayout
         android:id="@+id/root_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.user.LoginFragment">
 
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:contentDescription="@string/logo"
+            app:srcCompat="@drawable/ic_logo" />
+
         <LinearLayout
             android:id="@+id/fieldContainer"
             android:layout_width="318dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/logo">
 
             <EditText
-                android:text="@={loginViewModel.identityString}"
                 android:id="@+id/identityField"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -36,10 +45,10 @@
                 android:ems="10"
                 android:hint="@string/login_hint"
                 android:inputType="text|textEmailSubject"
+                android:text="@={loginViewModel.identityString}"
                 tools:targetApi="o" />
 
             <EditText
-                android:text="@={loginViewModel.passwordString}"
                 android:id="@+id/passwordField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -49,7 +58,8 @@
                 android:ems="10"
                 android:hint="@string/password_hint"
                 android:importantForAutofill="no"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:text="@={loginViewModel.passwordString}" />
 
             <Button
                 android:id="@+id/loginButton"
@@ -58,11 +68,11 @@
                 android:layout_margin="10dp"
                 android:background="@color/colorAccent"
                 android:fontFamily="@font/open_sans"
+                android:onClick="@{loginViewModel::onLoginButtonClick}"
                 android:text="@string/login_button_text"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="@color/secondaryTextColor"
-                android:onClick="@{loginViewModel::onLoginButtonClick}"/>
+                android:textColor="@color/secondaryTextColor" />
 
             <TextView
                 android:id="@+id/redirectText"
@@ -70,28 +80,23 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:fontFamily="@font/open_sans"
+                android:onClick="@{loginViewModel::onRedirectTextClick}"
                 android:text="@string/direct_to_sign_up"
                 android:textAlignment="center"
+                android:textColor="@color/redirect_color" />
+
+            <TextView
+                android:id="@+id/forgotPasswordLink"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/open_sans"
+                android:text="@string/forgot_password"
+                android:textAlignment="center"
                 android:textColor="@color/redirect_color"
-                android:onClick="@{loginViewModel::onRedirectTextClick}"/>
+                android:onClick="@{loginViewModel::onForgotPassword}"/>
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="121dp"
-            android:layout_height="108dp"
-            android:layout_above="@+id/fieldContainer"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="147dp"
-            android:layout_marginTop="134dp"
-            android:layout_marginEnd="142dp"
-            android:layout_marginBottom="4dp"
-            android:contentDescription="@string/logo"
-            app:srcCompat="@drawable/ic_logo" />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </RelativeLayout>
 
 </layout>
