--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -14,109 +14,116 @@
     </data>
 
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <RelativeLayout
         android:id="@+id/root_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.user.SignUpFragment">
 
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:contentDescription="@string/logo"
+            app:srcCompat="@drawable/ic_logo" />
+
         <LinearLayout
             android:id="@+id/fieldContainer"
             android:layout_width="293dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_below="@id/logo"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <EditText
-                android:text="@={viewModel.email}"
                 android:id="@+id/emailField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:afterTextChanged="@{viewModel::afterEmailChanged}"
                 android:drawableStart="@drawable/ic_email"
                 android:drawablePadding="10dp"
                 android:ems="10"
                 android:hint="@string/set_email_hint"
                 android:importantForAutofill="no"
                 android:inputType="textEmailAddress"
-                android:afterTextChanged="@{viewModel::afterEmailChanged}"/>
+                android:text="@={viewModel.email}" />
 
             <EditText
-                android:text="@={viewModel.username}"
                 android:id="@+id/usernameField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:afterTextChanged="@{viewModel::afterUsernameChanged}"
                 android:drawableStart="@drawable/ic_profile"
                 android:drawablePadding="10dp"
                 android:ems="10"
                 android:hint="@string/set_username_hint"
                 android:importantForAutofill="no"
                 android:inputType="textEmailAddress"
-                android:afterTextChanged="@{viewModel::afterUsernameChanged}"/>
+                android:text="@={viewModel.username}" />
 
             <EditText
-                android:text="@={viewModel.password}"
                 android:id="@+id/passwordField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:afterTextChanged="@{viewModel::afterPasswordChanged}"
                 android:drawableStart="@drawable/ic_password"
                 android:drawablePadding="10dp"
                 android:ems="10"
                 android:hint="@string/password_hint"
                 android:importantForAutofill="no"
                 android:inputType="textPassword"
-                android:afterTextChanged="@{viewModel::afterPasswordChanged}"/>
+                android:text="@={viewModel.password}" />
 
             <EditText
-                android:text="@={viewModel.confirmPassword}"
                 android:id="@+id/reenterPasswordField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:afterTextChanged="@{viewModel::afterConfirmPasswordChanged}"
                 android:drawableStart="@drawable/ic_password"
                 android:drawablePadding="10dp"
                 android:ems="10"
                 android:hint="@string/reenter_password_hint"
                 android:importantForAutofill="no"
                 android:inputType="textPassword"
-                android:afterTextChanged="@{viewModel::afterConfirmPasswordChanged}"/>
+                android:text="@={viewModel.confirmPassword}" />
 
             <Button
-                android:onClick="@{viewModel::OnClickCreateAccountButton}"
                 android:id="@+id/createAccountButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:background="@color/secondaryColor"
                 android:fontFamily="@font/open_sans"
+                android:onClick="@{viewModel::OnClickCreateAccountButton}"
                 android:text="@string/create_account_text"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
             <TextView
-                android:onClick="@{viewModel::OnClickRedirectLoginText}"
                 android:id="@+id/redirect_login_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/open_sans"
+                android:onClick="@{viewModel::OnClickRedirectLoginText}"
                 android:text="@string/redirect_sign_in"
                 android:textAlignment="center"
                 android:textColor="@color/redirect_color" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="99dp"
-            android:layout_height="89dp"
-            android:layout_marginStart="155dp"
-            android:layout_marginTop="82dp"
-            android:layout_marginEnd="157dp"
-            android:layout_marginBottom="14dp"
-            android:contentDescription="@string/logo"
-            app:srcCompat="@drawable/ic_logo" />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </RelativeLayout>
 
 </layout>
