- Now able to send Password reset email to user inbox - All ForgotPassword functionality and process

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -62,20 +62,30 @@
                 android:hint="@string/your_email"
                 android:importantForAutofill="no"
                 android:inputType="text|textEmailAddress"
-                android:text="@={viewmodel.emailAddress}" />
+                android:text="@={viewmodel.emailAddress}"
+                android:afterTextChanged="@{viewmodel::afterEmailChanged}"/>
 
             <Button
                 android:id="@+id/sendButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
+                android:alpha="0.5"
                 android:background="@color/colorPrimaryDark"
                 android:enabled="false"
+                android:onClick="@{viewmodel::onResetPasswordButtonClick}"
                 android:text="@string/reset_password_button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="@color/background_color"
-                android:textStyle="bold"
-                android:onClick="@{viewmodel::onResetPasswordButtonClick}"/>
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/statusText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:visibility="gone"/>
         </LinearLayout>
     </RelativeLayout>
 
